infra/flux-charts/noo-id/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noo-id
  namespace: noo-id
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noo-id
  template:
    metadata:
      labels:
        app: noo-id
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/noo-eu/id:latest
          name: noo-id
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: jwks-volume
              mountPath: /app/keys
              readOnly: true
          readinessProbe:
            httpGet:
              port: 3000
              path: /signin
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "512Mi"
      volumes:
        - name: jwks-volume
          secret:
            secretName: jwks
---
apiVersion: v1
kind: Service
metadata:
  name: noo-id
  namespace: noo-id
spec:
  selector:
    app: noo-id
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
