infra/flux-charts/noo-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noo-id
  namespace: noo-id
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /_noo {
        deny all;
        return 403;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: id.noo.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noo-id
                port:
                  number: 80
  tls:
    - hosts:
        - id.noo.eu
      secretName: noo-id-tls
